# mobile_wiki_diploma

./: .env.example  README.md  config.env.bstack  config.env.local_emulator  config.py  pyproject.toml
mobile_wiki_diploma/data/: language.py  search_queries.py
mobile_wiki_diploma/utils/: path.py
tests/: conftest.py  test_wikipedia.py
